[package]
name = "get_fields"
version = "0.1.0"
edition = "2021"
authors = ["modeck <matthewmodeck@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Provides a procedural macro that generates an array of the field names of a named struct"
keywords = ["macro", "proc_macro"]
homepage = "https://github.com/modeckrus/get_fields"
repository = "https://github.com/modeckrus/get_fields"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.80", features = ["derive", "printing", "extra-traits"] }
quote = "^1.0.10"
proc-macro2 = "^1.0.29"